...

const SearchBar = (props) => {
  return (
    <View style={styles.backgroundStyle}>
      <Ionicons name="search" style={styles.IconStyle} />
      <TextInput
        testID="search-input"
        placeholder="Search"
        placeholderTextColor="#999"
        style={styles.InputStyle}
        value={props.searchTerm}
        onChangeText={(newSearchTerm) => {
          props.onSearchTermChange(newSearchTerm);
        }}
...
